Modificaciones en los formularios
Se eliminò el MenuP_item ¨Administrador¨ y sus items se movieron al MenuP_Item "Sesion", a su vez, se eliminò el formulario de registro de administrador, se añadieron detalles de aliniaciòn en los campos de los catalogos, se cambio el texto de los botones eliminar por "Anular"

--- a/src/ui/Seminario.form
+++ b/src/ui/Seminario.form
@@ -80,7 +80,7 @@
                       <Component id="jBtnGuardarSemi" min="-2" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
                       <Component id="jBtnBorrarSemi" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace pref="125" max="32767" attributes="0"/>
+                      <EmptySpace pref="135" max="32767" attributes="0"/>
                   </Group>
               </Group>
             </DimensionLayout>
@@ -106,7 +106,7 @@
                 <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
                   <Image iconType="3" name="/icons/eliminar.png"/>
                 </Property>
-                <Property name="text" type="java.lang.String" value="Eliminar"/>
+                <Property name="text" type="java.lang.String" value="Anular"/>
                 <Property name="maximumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
                   <Dimension value="[1280, 650]"/>
                 </Property>
